added classes for Product

--- a/ProductSearchService.Services/ProductSearchService.Services.csproj
+++ b/ProductSearchService.Services/ProductSearchService.Services.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductSearchService.Core\ProductSearchService.Domain.csproj" />
+    <ProjectReference Include="..\ProductSearchService.Services.Abstractions\ProductSearchService.Services.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
