--- a/ProductSearchService.Api/ProductSearchService.Api.csproj
+++ b/ProductSearchService.Api/ProductSearchService.Api.csproj
@@ -5,7 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.18" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.18" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.18">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ProductSearchService.Core\ProductSearchService.Domain.csproj" />
+    <ProjectReference Include="..\ProductSearchService.DataAccess\ProductSearchService.DataAccess.csproj" />
+    <ProjectReference Include="..\ProductSearchService.Services.Abstractions\ProductSearchService.Services.Abstractions.csproj" />
+    <ProjectReference Include="..\ProductSearchService.Services\ProductSearchService.Services.csproj" />
   </ItemGroup>
 
 
