--- a/ProductSearchService.DataAccess/ProductSearchService.DataAccess.csproj
+++ b/ProductSearchService.DataAccess/ProductSearchService.DataAccess.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.18" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProductSearchService.Core\ProductSearchService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
