--- a/ProductSearchService.Services.Abstractions/ProductSearchService.Services.Abstractions.csproj
+++ b/ProductSearchService.Services.Abstractions/ProductSearchService.Services.Abstractions.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductSearchService.DTO\ProductSearchService.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
