--- a/ProductSearchService.Services/ProductSearchService.Services.csproj
+++ b/ProductSearchService.Services/ProductSearchService.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ProductSearchService.Core\ProductSearchService.Domain.csproj" />
     <ProjectReference Include="..\ProductSearchService.Services.Abstractions\ProductSearchService.Services.Abstractions.csproj" />
   </ItemGroup>
