added product warehouse

--- a/ProductSearchService.Api/appsettings.json
+++ b/ProductSearchService.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDB)\\MSSQLLocalDB;Initial Catalog=ProductSearchServiceDb;Trusted_Connection=True;"
+    "Default": "Data Source=SQL5080.site4now.net;Initial Catalog=db_a79485_productsearch;User Id=db_a79485_productsearch_admin;Password=productsearch123"
   },
     "Logging": {
       "LogLevel": {
